Adding scene to another scene's VSE causes audio and video to be unsynchronized #39208

Closed
opened 2014-03-16 00:47:35 +01:00 by Garrett · 7 comments

System Information
OS: Ubuntu 13.10
Linux kernel: 3.11.0-18-generic

Graphics:
VGA compatible controller: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06)
3D controller: NVIDIA Corporation GK107M [GeForce GT 750M] (rev a1)

Blender Version
Broken: blender-2.70-2aff243-linux-glibc211-x86_64

Short description of error

If you have a scene which has audio and video, but where the start frame is not 1, then using that scene in another scene's VSE will cause audio/video to be unsynchronized.

Exact steps for others to reproduce the error

  1. Open new Blender file
  2. Create a new scene, and switch to that scene's VSEA
  3. Add short sound clip at frame 1
  4. Set Start Frame to 100 (and leave End Frame at 250)
  5. (OPTIONAL) Create a simple animation in "Scene.001" and add it to "Scene.001"'s VSE
  6. Swtich back to first scene's VSE
  7. Add in the second scene (SHIFT+A > Scene > "Scene.001")
  8. Press ALT+A to playback and notice that the sound and video from "Scene.001" are not in sync

In this .blend file, steps 1-8 have been completed: VSE_bug.blend

**System Information** OS: Ubuntu 13.10 Linux kernel: 3.11.0-18-generic Graphics: VGA compatible controller: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06) 3D controller: NVIDIA Corporation GK107M [GeForce GT 750M] (rev a1) **Blender Version** Broken: blender-2.70-2aff243-linux-glibc211-x86_64 **Short description of error** If you have a scene which has audio and video, but where the start frame is not 1, then using that scene in another scene's VSE will cause audio/video to be unsynchronized. **Exact steps for others to reproduce the error** 1) Open new Blender file 2) Create a new scene, and switch to that scene's VSEA 4) Add short sound clip at frame 1 5) Set Start Frame to 100 (and leave End Frame at 250) 6) (OPTIONAL) Create a simple animation in "Scene.001" and add it to "Scene.001"'s VSE 7) Swtich back to first scene's VSE 8) Add in the second scene (SHIFT+A > Scene > "Scene.001") 9) Press ALT+A to playback and notice that the sound and video from "Scene.001" are not in sync In this .blend file, steps 1-8 have been completed: [VSE_bug.blend](https://archive.blender.org/developer/F81320/VSE_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Garrett-8

Added subscriber: @Garrett-8

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-03-16 18:11:10 +01:00

This issue was referenced by blender/blender-addons-contrib@930765faa8

This issue was referenced by blender/blender-addons-contrib@930765faa81efe3894e5476a59f5f3298da54ae4

This issue was referenced by 930765faa8

This issue was referenced by 930765faa81efe3894e5476a59f5f3298da54ae4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 930765faa8.

Closed by commit 930765faa8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39208
No description provided.